# diag-client-lib

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitpod.yml  CMakeLists.txt  CMakeLists_8txt.html  README.md  README_8md.html  annotated.html  appl_2CMakeLists_8txt.html  appl_2src_2common_2logger_8h.html  appl_2src_2common_2logger_8h__dep__incl.map  appl_2src_2common_2logger_8h__dep__incl.md5  appl_2src_2common_2logger_8h__incl.map  appl_2src_2common_2logger_8h__incl.md5  appl_2src_2common_2logger_8h_source.html  appl_2src_2diag-client_2common_2logger_8h.html  appl_2src_2diag-client_2common_2logger_8h__dep__incl.map  appl_2src_2diag-client_2common_2logger_8h__dep__incl.md5  appl_2src_2diag-client_2common_2logger_8h__incl.map  appl_2src_2diag-client_2common_2logger_8h__incl.md5  appl_2src_2diag-client_2common_2logger_8h_source.html  boost__support__error__domain_8cpp.html  boost__support__error__domain_8cpp__incl.map  boost__support__error__domain_8cpp__incl.md5  boost__support__error__domain_8cpp_source.html  boost__support__error__domain_8h.html  boost__support__error__domain_8h__dep__incl.map  boost__support__error__domain_8h__dep__incl.md5  boost__support__error__domain_8h__incl.map  boost__support__error__domain_8h__incl.md5  boost__support__error__domain_8h_source.html  build.sh  build_with_clang_14.sh  build_with_gcc_11.sh  build_with_gcc_9.sh  classboost__support_1_1client_1_1tcp_1_1TcpClient-members.html  classboost__support_1_1client_1_1tcp_1_1TcpClient.html  classboost__support_1_1client_1_1tcp_1_1TcpClient_1_1TcpClientImpl-members.html  (+2724 more)
appl/: CMakeLists.txt
appl/etc/: diag_client_config.json
appl/include/: create_diagnostic_client.h  diagnostic_client.h  diagnostic_client_conversation.h  diagnostic_client_conversion.h  diagnostic_client_uds_message.h
appl/src/: diagnostic_client.cpp  diagnostic_client_impl.cpp  diagnostic_client_impl.h
appl/src/common/: diagnostic_manager.cpp  diagnostic_manager.h  diagnostic_manager_plugin_factory.cpp  diagnostic_manager_plugin_factory.h
appl/src/dcm/: diagnostic_communication_manager.cpp  diagnostic_communication_manager.h
diag-client-lib/: CMakeLists.txt
diag-client-lib/appl/: CMakeLists.txt
diag-client-lib/appl/etc/: diag_client_config.json
diag-client-lib/appl/include/: create_diagnostic_client.h  diagnostic_client.h  diagnostic_client_conversation.h  diagnostic_client_message_type.h  diagnostic_client_result.h  diagnostic_client_uds_message.h  diagnostic_client_uds_message_type.h  diagnostic_client_vehicle_info_message_type.h
diag-client-lib/appl/src/: diagnostic_client.cpp  diagnostic_client_conversation.cpp  diagnostic_client_impl.cpp  diagnostic_client_impl.h
diag-client-lib/cmake/: Config.cmake.in
diag-client-lib/examples/: README.md
diag-client-lib/examples/example_1/: CMakeLists.txt
diag-client-lib/lib/: CMakeLists.txt
diag-client-lib/lib/BoostSupport/: CMakeLists.txt
diag-client-lib/lib/boost-support/: CMakeLists.txt
diag-client-lib/lib/common/: CMakeLists.txt  common_header.h
diag-client-lib/lib/doip-client/: CMakeLists.txt  doip_transport_protocol_handler.cpp  doip_transport_protocol_handler.h
diag-client-lib/lib/libBoost/: CMakeLists.txt
diag-client-lib/lib/libCommon/: CMakeLists.txt  common_Header.h  common_Templates.h
diag-client-lib/lib/libDoIP/: CMakeLists.txt  doip_transport_protocol_handler.cpp  doip_transport_protocol_handler.h
diag-client-lib/lib/libUdsTransportLayerApi/: CMakeLists.txt
diag-client-lib/lib/libUtility/: CMakeLists.txt
diag-client-lib/lib/platform-core/: CMakeLists.txt
diag-client-lib/lib/uds-transport-layer-api/: CMakeLists.txt
diag-client-lib/lib/utility-support/: CMakeLists.txt
examples/: CMakeLists.txt  README.md
examples/example_1/: CMakeLists.txt
examples/example_1/etc/: diag_client_config.json
examples/example_1/src/: main.cpp  uds_message.h
examples/example_2/: CMakeLists.txt
examples/example_2/etc/: diag_client_config.json
examples/example_2/src/: main.cpp  uds_message.h
examples/example_3/: CMakeLists.txt
examples/example_3/etc/: diag_client_config.json
examples/example_3/src/: main.cpp  uds_message.h
lib/: CMakeLists.txt
lib/libBoost/: CMakeLists.txt
lib/libBoost/libJsonParser/: jsonParser.h
lib/libCommon/: CMakeLists.txt  common_Header.h  common_Templates.h
lib/libDoIP/: CMakeLists.txt  doIP_TransportProtocolHandler.cpp  doIP_TransportProtocolHandler.h  doip_transport_protocol_handler.h
lib/libDoIP/channel/: tcp_Channel.cpp  tcp_Channel.h  tcp_channel.cpp  tcp_channel.h  tcp_channel_handler_impl.cpp  tcp_channel_handler_impl.h  tcp_channel_state_impl.cpp  tcp_channel_state_impl.h  udp_Channel.cpp  udp_Channel.h
lib/libDoIP/common/: common_doIP_Header.h  common_doIP_Types.h  common_doip_types.h  doip_payload_type.h
lib/libDoIP/connection/: connection_Manager.cpp  connection_Manager.h  connection_manager.cpp
lib/libDoIP/handler/: tcp_TransportHandler.cpp  tcp_TransportHandler.h  tcp_transport_handler.h  udp_TransportHandler.cpp  udp_TransportHandler.h
lib/libDoIP/sockets/: tcp_SocketHandler.cpp  tcp_SocketHandler.h  tcp_socket_handler.cpp  tcp_socket_handler.h  udp_SocketHandler.cpp  udp_SocketHandler.h
lib/libDoIP/timer/: oneShotSyncTimer.cpp  oneShotSyncTimer.h  oneShotTimer_Types.h
lib/libOsAbstraction/: CMakeLists.txt
lib/libOsAbstraction/libBoost/: CMakeLists.txt
lib/libOsAbstraction/libLinux/: CMakeLists.txt
lib/libOsAbstraction/libQt/: CMakeLists.txt
lib/libUdsTransportLayerApi/: CMakeLists.txt
lib/libUtility/: CMakeLists.txt
lib/libUtility/state/: state.cpp  state.h
test/: CMakeLists.txt  main.cpp  main.h
test/component/: CMakeLists.txt  component_test.h  main.cpp  main.h
test/component/common/: logger.h
test/doip_handler/: common_doip_types.h  doip_payload_type.h  doip_tcp_handler.cpp  doip_tcp_handler.h  doip_udp_handler.cpp  doip_udp_handler.h  logger.h  tcp_socket_handler.cpp  tcp_socket_handler.h  udp_socket_handler.cpp  udp_socket_handler.h
test/test_case/: diag_request_response_test.cpp  init_test.cpp  tls_test.cpp  vehicle_discovery_test.cpp
(+597 files in other folders)
